Additional 2.0.0 Release Mods

--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -56,6 +56,8 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
       <blockquote> 
         <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/004360.html">AV Science 
           Forum</a><br>
+          <a href="http://www.avsforum.com/ubb/Forum12/HTML/005313.html">dTV 2.0.0 
+          Release Thread</a> (AVS Forum)<br>
           <a href="http://www.avsforum.com/ubb/Forum12/HTML/005129.html">ANNOUNCEMENT: 
           dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
           <a href="http://www.avsforum.com/ubb/Forum12/HTML/004448.html">NEW VERSION: 
