--- a/htdocs/News.htm
+++ b/htdocs/News.htm
@@ -39,6 +39,34 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
+      <p><b>2.0.0</b><a href="distributions/dTV200exe.zip"> </a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Tearing is gone at all refresh rates!<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Error message no longer pops up if 
+        you resize video window too small.<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Video no longer becomes purple when 
+        resizing or maximizing.<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Better Automatic Aspect Ratio Detection defaults<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Smoother Synchronization<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Triple Buffering&nbsp;<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Added Option to Disable Startup Splash Screen<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Changed Keyboard Shortcuts; <a href="keyboard.htm">See 
+        List</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - New shortcuts added for video 
+        source and video format selection<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Some existing shortcuts modified 
+        for better intuition<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New Video Deinterlace Algorithm - better 
+        for slow moving images, especially graphics displays.<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Old Video Deinterlace Algorithm - still available, 
+        better for fast motion.<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Automatic switching between three Video Deinterlace 
+        algorithms:<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Simple Weave during static images<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - New Video Deinterlace during slow 
+        moving images<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Old Video Deinterlace during fast 
+        moving images<br>
+      </p>
       <p><b>1.9</b><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Automatic aspect ratio detection!<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slightly less dropped frames on slower systems<br>
