--- a/htdocs/Thanks.htm
+++ b/htdocs/Thanks.htm
@@ -51,10 +51,11 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
           code.</li>
         <li>Thanks to Daniel Schmelzer for his hard work creating and updating 
           the website. Love the logo!&nbsp;</li>
-        <li>Thanks to Steve Grimm for his work on the old method of 3:2 pulldown 
-          and to his contribution of the aspect ratio autodetect code.</li>
-        <li>Thanks to Tom Barry for his optimization of the assembly code and 
-          his contribution of low-level user manipulation of the bt chipset.</li>
+        <li>Thanks to Steve Grimm for his work on the new and old methods of 3:2 
+          pulldown and to his contribution of the aspect ratio autodetect code.</li>
+        <li>Thanks to Tom Barry for his implementation of triple buffering and 
+          his synchronization fix, as well as his contribution of low-level user 
+          manipulation of the bt chipset.</li>
         <li>Thanks to Yvon Quere and Ali for finding bTV and Yvon for creating 
           and updating the FAQ.</li>
         <li>Thanks to Jason Castle for updating the todo and bugs pages.</li>
