--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -39,7 +39,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p><b>Additional developers are needed for dTV!</b> In a little over a month, 
+      <p><b>Additional developers are needed for dTV!</b> In about three months, 
         this project has garnered a <b>large, loyal, active, and knowledgable 
         user-base</b> of videophiles. This project is making waves in the home 
         theater industry! The project is currently in need of developers with 
@@ -114,7 +114,8 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         Algorithm for 3-2 Pulldown Deinterlacing</a></p>
       <h2><br>
         Other Downloads</h2>
-      <p><a href="/Deinterlace.zip">Initial Test version of a DirectShow Filter</a></p>
+      <p>Initial Test version of a DirectShow Filter (see the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi/Deinterlace/?cvsroot=deinterlace">project 
+        CVS</a>)</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
