--- a/htdocs/keyboard.htm
+++ b/htdocs/keyboard.htm
@@ -47,24 +47,42 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 
 <table border="0">
   <tr>
-    <td width="200"><small>Channel Up</small></td>
-    <td valign="bottom"><small>PgUp</small></td>
+    <td width="200">
+            <p><small>Channel Up</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>PgUp</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Channel Down</small></td>
-    <td valign="bottom"><small>PgDn</small></td>
+    <td width="200">
+            <p><small>Channel Down</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>PgDn</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Volume Up</small></td>
+    <td width="200">
+            <p><small>Volume Up</small></p>
+          </td>
     <td valign="bottom"><small>+</small></td>
   </tr>
   <tr>
-    <td width="200"><small>Volume Down</small></td>
-    <td valign="bottom"><small>-</small></td>
+    <td width="200">
+            <p><small>Volume Down</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>-</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Mute</small></td>
-    <td valign="bottom"><small>M</small></td>
+    <td width="200">
+            <p><small>Mute</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>M</small></p>
+          </td>
   </tr>
 </table>
 
@@ -74,32 +92,60 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 
 <table border="0">
   <tr>
-    <td width="200"><small>Exit</small></td>
-    <td valign="bottom"><small>Esc</small></td>
+    <td width="200">
+            <p><small>Exit</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Esc</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Toggle Menu</small></td>
-    <td valign="bottom"><small>Tab</small></td>
+    <td width="200">
+            <p><small>Toggle Menu</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Tab</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Toggle Status Bar</small></td>
-    <td valign="bottom"><small>S</small></td>
+    <td width="200">
+            <p><small>Toggle Status Bar</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>S</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Toggle Show Cursor</small></td>
-    <td valign="bottom"><small>Ctrl+Enter</small></td>
+    <td width="200">
+            <p><small>Toggle Show Cursor</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Enter</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Full Screen</small></td>
-    <td valign="bottom"><small>Alt+Enter</small></td>
+    <td width="200">
+            <p><small>Full Screen</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Alt+Enter</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Pause</small> </td>
-    <td valign="bottom"><small>P</small></td>
+    <td width="200">
+            <p><small>Pause</small> </p>
+          </td>
+    <td valign="bottom">
+            <p><small>P</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Take Still Picture</small></td>
-    <td valign="bottom"><small>L</small></td>
+    <td width="200">
+            <p><small>Take Still Picture</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>L</small></p>
+          </td>
   </tr>
 </table>
 
@@ -109,28 +155,52 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 
 <table border="0">
   <tr>
-    <td width="200"><small>Tuner</small></td>
-    <td valign="bottom"><small>Ctrl+Alt+F1</small></td>
+    <td width="200">
+            <p><small>Tuner</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Alt+F1</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Composite</small></td>
-    <td valign="bottom"><small>Ctrl+Alt+F2</small></td>
+    <td width="200">
+            <p><small>Composite</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Alt+F2</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>S-Video</small></td>
-    <td valign="bottom"><small>Ctrl+Alt+F3</small></td>
+    <td width="200">
+            <p><small>S-Video</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Alt+F3</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Composite via S-Video</small></td>
-    <td valign="bottom"><small>Ctrl+Alt+F4</small></td>
+    <td width="200">
+            <p><small>Composite via S-Video</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Alt+F4</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Other 1</small></td>
-    <td valign="bottom"><small>Ctrl+Alt+F5</small></td>
+    <td width="200">
+            <p><small>Other 1</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Alt+F5</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Other 2</small></td>
-    <td valign="bottom"><small>Ctrl+Alt+F6</small></td>
+    <td width="200">
+            <p><small>Other 2</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Alt+F6</small></p>
+          </td>
   </tr>
 </table>
 <p><b>Video Format Select</b></p>
@@ -139,28 +209,52 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 
 <table border="0">
   <tr>
-    <td width="200"><small>PAL-BDGHI</small></td>
-    <td valign="bottom"><small>Shift+Alt+F1</small></td>
+    <td width="200">
+            <p><small>PAL-BDGHI</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+Alt+F1</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>NTSC</small></td>
-    <td valign="bottom"><small>Shift+Alt+F2</small></td>
+    <td width="200">
+            <p><small>NTSC</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+Alt+F2</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>SECAM</small></td>
-    <td valign="bottom"><small>Shift+Alt+F3</small></td>
+    <td width="200">
+            <p><small>SECAM</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+Alt+F3</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>PAL-M</small></td>
-    <td valign="bottom"><small>Shift+Alt+F4</small></td>
+    <td width="200">
+            <p><small>PAL-M</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+Alt+F4</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>PAL-N</small></td>
-    <td valign="bottom"><small>Shift+Alt+F5</small></td>
+    <td width="200">
+            <p><small>PAL-N</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+Alt+F5</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>NTSC Japan</small></td>
-    <td valign="bottom"><small>Shift+Alt+F6</small></td>
+    <td width="200">
+            <p><small>NTSC Japan</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+Alt+F6</small></p>
+          </td>
   </tr>
 </table>
 
@@ -170,157 +264,301 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 
 <table border="0">
   <tr>
-    <td width="200"><small>Brightness Down</small></td>
-    <td valign="bottom"><small>B</small></td>
+    <td width="200">
+            <p><small>Brightness Down</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>B</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Brightness Up</small></td>
-    <td valign="bottom"><small>Shift+B</small></td>
+    <td width="200">
+            <p><small>Brightness Up</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+B</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Contrast Down</small></td>
-    <td valign="bottom"><small>K</small></td>
+    <td width="200">
+            <p><small>Contrast Down</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>K</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Contrast Up</small></td>
-    <td valign="bottom"><small>Shift+K</small></td>
+    <td width="200">
+            <p><small>Contrast Up</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+K</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Color Down</small></td>
-    <td valign="bottom"><small>C</small></td>
+    <td width="200">
+            <p><small>Color Down</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>C</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Color Up</small></td>
-    <td valign="bottom"><small>Shift+C</small></td>
+    <td width="200">
+            <p><small>Color Up</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+C</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Hue Down</small></td>
-    <td valign="bottom"><small>H</small></td>
+    <td width="200">
+            <p><small>Hue Down</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>H</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Hue Up</small></td>
-    <td valign="bottom"><small>Shift+H</small></td>
+    <td width="200">
+            <p><small>Hue Up</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+H</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Overscan Down</small></td>
-    <td valign="bottom"><small>O</small></td>
+    <td width="200">
+            <p><small>Overscan Down</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>O</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Overscan Up</small></td>
-    <td valign="bottom"><small>Shift+O</small></td>
+    <td width="200">
+            <p><small>Overscan Up</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+O</small></p>
+          </td>
   </tr>
 </table>
 <p><b>Aspect Ratio Control</b></p>
 <table border="0">
   <tr>
-    <td width="200"><small>4:3 Fullscreen</small></td>
-    <td valign="bottom"><small>1</small></td>
+    <td width="200">
+            <p><small>4:3 Fullscreen</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>1</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Letterboxed</small></td>
-    <td valign="bottom"><small>2</small></td>
+    <td width="200">
+            <p><small>Letterboxed</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>2</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>16:9 Anamorphic</small></td>
-    <td valign="bottom"><small>3</small></td>
+    <td width="200">
+            <p><small>16:9 Anamorphic</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>3</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Toggle Automatic Detect</small></td>
-    <td valign="bottom"><small>A</small></td>
+    <td width="200">
+            <p><small>Toggle Automatic Detect</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>A</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Detect from Current Image</small></td>
-    <td valign="bottom"><small>`</small></td>
+    <td width="200">
+            <p><small>Detect from Current Image</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>`</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Stretch to Window</small></td>
-    <td valign="bottom"><small>0</small></td>
+    <td width="200">
+            <p><small>Stretch to Window</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>0</small></p>
+          </td>
   </tr>
 </table>
 <p><b>Advanced Aspect Ratio Control</b></p>
 <table border="0">
   <tr>
-    <td width="200"><small>1.33</small></td>
-    <td valign="bottom"><small>Ctrl+1</small></td>
+    <td width="200">
+            <p><small>1.33</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+1</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.66 Letterboxed</small></td>
-    <td valign="bottom"><small>Ctrl+2</small></td>
+    <td width="200">
+            <p><small>1.66 Letterboxed</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+2</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.78 Letterboxed</small></td>
-    <td valign="bottom"><small>Ctrl+3</small></td>
+    <td width="200">
+            <p><small>1.78 Letterboxed</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+3</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.85 Letterboxed</small></td>
-    <td valign="bottom"><small>Ctrl+4</small></td>
+    <td width="200">
+            <p><small>1.85 Letterboxed</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+4</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>2.00 Letterboxed</small></td>
-    <td valign="bottom"><small>Ctrl+5</small></td>
+    <td width="200">
+            <p><small>2.00 Letterboxed</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+5</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>2.35 Letterboxed</small></td>
-    <td valign="bottom"><small>Ctrl+6</small></td>
+    <td width="200">
+            <p><small>2.35 Letterboxed</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+6</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.66 Anamorphic</small></td>
-    <td valign="bottom"><small>Ctrl+Shift+2</small></td>
+    <td width="200">
+            <p><small>1.66 Anamorphic</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+2</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.78 Anamorphic</small></td>
-    <td valign="bottom"><small>Ctrl+Shift+3</small></td>
+    <td width="200">
+            <p><small>1.78 Anamorphic</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+3</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.85 Anamorphic</small></td>
-    <td valign="bottom"><small>Ctrl+Shift+4</small></td>
+    <td width="200">
+            <p><small>1.85 Anamorphic</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+4</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>2.00 Anamorphic</small></td>
-    <td valign="bottom"><small>Ctrl+Shift+5</small></td>
+    <td width="200">
+            <p><small>2.00 Anamorphic</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+5</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>2.35 Anamorphic</small></td>
-    <td valign="bottom"><small>Ctrl+Shift+6</small></td>
+    <td width="200">
+            <p><small>2.35 Anamorphic</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+6</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Custom (from INI file)</small></td>
-    <td valign="bottom"><small>Ctrl+9</small></td>
+    <td width="200">
+            <p><small>Custom (from INI file)</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+9</small></p>
+          </td>
   </tr>
 </table>
 <p><b>Configure Aspect Ratio Of Display Screen</b></p>
 <table border="0">
   <tr>
-    <td width="200"><small>Same as Computer Resolution</small></td>
-    <td valign="bottom"><small>Alt+0</small></td>
+    <td width="200">
+            <p><small>Same as Computer Resolution</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Alt+0</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.33 - TVs, monitors</small></td>
-    <td valign="bottom"><small>Alt+1</small></td>
+    <td width="200">
+            <p><small>1.33 - TVs, monitors</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Alt+1</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.66</small></td>
-    <td valign="bottom"><small>Alt+2</small></td>
+    <td width="200">
+            <p><small>1.66</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Alt+2</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.78 - HDTV displays</small></td>
-    <td valign="bottom"><small>Alt+3</small></td>
+    <td width="200">
+            <p><small>1.78 - HDTV displays</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Alt+3</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>1.85</small></td>
-    <td valign="bottom"><small>Alt+4</small></td>
+    <td width="200">
+            <p><small>1.85</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Alt+4</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>2.00</small></td>
-    <td valign="bottom"><small>Alt+5</small></td>
+    <td width="200">
+            <p><small>2.00</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Alt+5</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>2.35</small></td>
-    <td valign="bottom"><small>Alt+6</small></td>
+    <td width="200">
+            <p><small>2.35</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Alt+6</small></p>
+          </td>
   </tr>
   <tr>
-    <td width="200"><small>Custom (from INI file)</small></td>
-    <td valign="bottom"><small>Alt+9</small></td>
+    <td width="200">
+            <p><small>Custom (from INI file)</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Alt+9</small></p>
+          </td>
   </tr>
 </table>
 
