--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -68,24 +68,27 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
       <blockquote> 
         <p>Steve is contributing enhancements to the deinterlacing modes including 
           better automatic switching between video mode and 3:2 pulldown mode, 
-          and handling of material that has bad 3:2 pulldown. He also worked on 
-          an early version of a 3:2 pulldown deinterlacing algorithm. In addition, 
-          he is the author of the aspect ratio autodetection code which began 
-          to be included in version 1.9.</p>
+          and handling of material that has bad 3:2 pulldown. In particular, Steve 
+          made significant modifications to the deinterlacing algorithm in version 
+          2.0.0. He also worked on an early version of a 3:2 pulldown deinterlacing 
+          algorithm. In addition, he is the author of the aspect ratio autodetection 
+          code which was included in version 1.9.</p>
       </blockquote>
-      <h2><br>
-        Michael Samblanet</h2>
+      <p><br>
+      </p>
+      <h2>Tom Barry</h2>
+      <p> 
+      <blockquote>Tom contributed the triple buffering code and synchronization 
+        fixes for version 2.0.0. Also, he has authored several MMX assembly optimizations 
+        to the video deinterlace mode and added the advanced Brooktree/Conexant 
+        chipset settings menu, both of which were included in version 1.9.</blockquote>
+      <br>
+      <h2> Michael Samblanet</h2>
       <blockquote> 
         <p>Michael is continuing to upgrade his aspect ratio control code.</p>
       </blockquote>
-      <h2><br>
-        Tom Barry</h2>
-      <p>
-        <blockquote>Tom is the author of several assembly optimizations to the 
-          video deinterlace mode and the addition of the advanced Brooktree/Conexant 
-          chipset settings menu, both of which began to be included in version 
-          1.9. </blockquote>
-      </p>
+      <h2>&nbsp; </h2>
+      <p></p>
       <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
         list of the many others who have contributed time and effort.</p>
       <!-- #EndEditable --></td>
