--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -68,7 +68,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Old Video Deinterlace during fast
       moving images<br>
       <br>
-      Version 1.9&#151;<b>Experimential</b>&#151;[<a href="distributions/dTV19exe.zip">Binary 
+        Version 1.9&#151;<b>Stable</b>&#151;[<a href="distributions/dTV19exe.zip">Binary 
         Zipped</a>] [<a href="distributions/dTV19src.zip">Source Zipped</a>] [<a href="dTV_Readme109.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Automatic aspect ratio detection!<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slightly less dropped frames on slower systems<br>
