--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -83,8 +83,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p>A <a href="http://www.video-demystified.com/mm/tutor/ch08.pdf">chapter 
         from Video Demystified</a> dealing with the PAL, NTSC, and SECAM standards 
         as well as Teletext and Closed-Captioning.</p>
-      <p>An explanation of the <a href="IniFile.htm">options available</a> 
-        in the dTV.ini file.</p>
+      <p>An explanation of the <a href="IniFile.htm">options available</a> in 
+        the dTV.ini file.</p>
+      <p>Conexant's <a href="distributions/btregtools.zip">Bt 8x8 register tool</a> 
+        for Windows 9x</p>
       <p></p>
       <h2></h2>
       <h2> <br>
