--- a/htdocs/card_support.htm
+++ b/htdocs/card_support.htm
@@ -40,10 +40,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Here is a list of the cards that should be supported in version 1.4 
-        (list taken from the linux bttv driver on which my program was originally 
-        based--subsequently modified based on user reports). Those cards that 
-        have been confirmed by users as working are noted as such.</p>
+      <p>Here is a list of the cards that should be supported by dTV (list taken 
+        from the linux bttv driver on which dTV was originally based--subsequently 
+        modified based on user reports). Those cards that have been confirmed 
+        by users as working are noted as such.</p>
       <table width="620" border="0" cellspacing="0" cellpadding="0" align="left">
         <tr> 
           <td width="219"><img src="images/spacer.gif" width="219" height="1"></td>
