--- a/htdocs/card_support.htm
+++ b/htdocs/card_support.htm
@@ -207,8 +207,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
         </tr>
-        <tr>
-          <td valign="middle" align="left">
+        <tr> 
+          <td valign="middle" align="left"> 
             <p>Boeder PC Chatcam</p>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
@@ -348,6 +348,34 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             <blockquote> 
               <p>WinTV</p>
             </blockquote>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote>WinTV-D</blockquote>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"> 
+            <p><a href="WinTV-D_Notes.htm">Note</a></p>
+          </td>
+        </tr>
+        <tr>
+          <td valign="middle" align="left"> 
+            <p><blockquote>WinTV 401</blockquote>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -860,8 +888,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" width="1"><img src="images/spacer.gif" width="1" height="32"></td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
-          <td height="23" align="center" valign="middle">&nbsp;</td>
-          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
